# multisig-predicate

./: Cargo.toml  README.md
predicate/: Cargo.toml  Forc.toml
predicate/src/: main.sw
predicate/tests/: harness.rs
rust_app/: Cargo.toml
rust_app/src/: main.rs
src/: main.sw
tests/: harness.rs
