[project]
name = "multi-sig"
version = "0.1.0" 
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = "0.14"
fuel-vm = "0.8"
fuel-tx = "0.12.1"
fuel-crypto = { version = "0.5" }
fuel-core = "0.8"
fuel-gql-client = { version = "0.8" }
fuels-abigen-macro = "0.14"
tokio = { version = "1.12", features = ["rt", "macros"] }


[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
