[package]
name = "rust_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuels = "0.14"
fuel-vm = "0.8"
fuel-tx = "0.12.1"
fuel-crypto = { version = "0.5" }
fuel-core = "0.8"
fuel-gql-client = { version = "0.8" }
fuels-abigen-macro = "0.14"
tokio = { version = "1.12", features = ["rt", "macros"] }
